# Py-MathParser

./: .gitmodules  MANIFEST.in  README.md  mathparser.cpp  setup.cfg  setup.py
.github/: build.yml
.github/workflows/: build.yml  upload.yml
include/: parser.hpp
src/: mathparser.cpp
test/: aio  async_parser.cpp
