[metadata]
name = Parser
url = https://github.com/KJ002/Py-MathParser

author = James Butcher
author_email = jamesbutcher167@gmail.com
description = Evaluate
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = tensorflow, yolo, AI, TPU
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
