[metadata]
name = Parser
url = https://github.com/KJ002/Py-MathParser
version = 0.1.0

author = James Butcher
author_email = jamesbutcher167@gmail.com
description = Evaluate infix math expresion in python with ease.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
